syntax = "proto3";

package dd_trace;

message TracePayload {
	string hostName = 1;
	string env = 2;
	repeated APITrace traces = 3;
	repeated Span transactions = 4;
}

message APITrace {
	uint64 traceID = 1;
	repeated Span spans = 2;
	int64 startTime = 6;
	int64 endTime = 7;
}

message Span {
	string service = 1;
	string name = 2;
	string resource = 3;
	uint64 traceID = 4;
	uint64 spanID = 5;
	uint64 parentID = 6;
	int64 start = 7;
	int64 duration = 8;
	int32 error = 9;
	map<string, string> meta = 10;
	map<string, double> metrics = 11;
	string type = 12;
}


// APM stats top level container
message StatsPayload {
	string agentHostname = 1;
	string agentEnv = 2;
	repeated ClientStatsPayload stats = 3;
	string agentVersion = 4;
	bool clientComputed = 5;
}

message ClientStatsPayload {
	string hostname = 1;
	string env = 2;
	string version = 3;
	repeated ClientStatsBucket stats = 4;
	string lang = 5;
	string tracerVersion = 6;
	string runtimeID = 7;
	uint64 sequence = 8;
	string agentAggregation = 9;
	string service = 10;
	string containerID = 11;
	repeated string tags = 12;
}

message ClientStatsBucket {
	uint64 start = 1;
	uint64 duration = 2;
	repeated ClientGroupedStats stats = 3;
	int64 agentTimeShift = 4;
}

message ClientGroupedStats {
	string service = 1;
	string name = 2;
	string resource = 3;
	uint32 HTTP_status_code = 4;
	string type = 5;
	string DB_type = 6;
	uint64 hits = 7;
	uint64 errors = 8;
	uint64 duration = 9;
	bytes okSummary = 10;
	bytes errorSummary = 11;
	bool synthetics = 12;
	uint64 topLevelHits = 13;
}
